turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:49: error: not enough arguments for constructor Array: (_length: Int)Array[Int].
Unspecified value parameter _length.
	rule = new Array[Int]
               ^